add token prune command
